# kanban-desktop

./: .gitignore  README-ALEMBIC.md  README-Google-Drive-API.md  README-OTHER.md  README.md  SPECIFICATION.md
backend/: main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 9df8b28afdef_initial_migration.py
backend/app/api/routers/: backup.py  google.py  project.py  status.py  subtask.py  task.py
backend/app/core/: config.py  db.py
backend/app/models/: models.py
backend/app/services/: backup.py  google_auth.py  google_drive.py  project.py  status.py  subtask.py  sync.py  task.py
frontend/: index.html  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: backup.ts  client.ts  project.ts  status.ts  task.ts
frontend/src/assets/styles/: _themes.scss  _variables.scss  main.scss
frontend/src/components/: CloudSyncWidget.vue  ProjectModal.vue  TaskModal.vue
frontend/src/composables/: useDragAndDrop.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/views/: BackupView.vue  BoardView.vue  HomeView.vue
