[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.19",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[tool.ruff]
# Вмикаємо перевірку стилю коду та автоматичне виправлення імпортів
select = ["E", "F", "I", "W"]
ignore = []

# Довжина рядка за стандартом Black/Ruff
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
